Added first styles for responsive

--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HACIS PROYECTOS</title>
     <!-- 
-<link href="css/themify-icons.css" rel="stylesheet" type="text/css" media="all" />
-<link href="css/flexslider.css" rel="stylesheet" type="text/css" media="all" />
-<link href="css/lightbox.min.css" rel="stylesheet" type="text/css" media="all" />
-<link href="css/ytplayer.css" rel="stylesheet" type="text/css" media="all" />
--->
+    <link href="css/themify-icons.css" rel="stylesheet" type="text/css" media="all" />
+    <link href="css/flexslider.css" rel="stylesheet" type="text/css" media="all" />
+    <link href="css/lightbox.min.css" rel="stylesheet" type="text/css" media="all" />
+    <link href="css/ytplayer.css" rel="stylesheet" type="text/css" media="all" />
+    -->
     <!-- <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" media="all" /> -->
     <link rel="stylesheet" href="css/font-awesome.min.css" type="text/css" media="all" />
     <link href="css/main.css" rel="stylesheet" type="text/css" media="all" />
     <!--
-<link href='http://fonts.googleapis.com/css?family=Lato:300,400%7CRaleway:100,400,300,500,600,700%7COpen+Sans:400,500,600' rel='stylesheet' type='text/css'> 
--->
+    <link href='http://fonts.googleapis.com/css?family=Lato:300,400%7CRaleway:100,400,300,500,600,700%7COpen+Sans:400,500,600' rel='stylesheet' type='text/css'> 
+    -->
     <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico" />
      
   </head>
@@ -29,10 +29,10 @@
             </a>
           </div> 
           <ul>
-            <li><a href="#nosotros">Nosotros</a></li>
-            <li><a href="#proyectos">Proyectos</a></li>
-            <li><a href="#servicios">Servicios</a></li>
-            <li><a href="#contacto">Contáctanos</a></li>
+            <li><a id="nosotros" href="#nosotrosServicios">Nosotros</a></li>
+            <li><a id="proyectos" href="#proyectosServicios">Proyectos</a></li>
+            <li><a id="servicios" href="#serviciosServicios">Servicios</a></li>
+            <li><a id="contacto" href="#contactoServicios">Contáctanos</a></li>
           </ul>
         </div>
       </nav>
@@ -54,7 +54,7 @@
     </div>
 
 
-    <section id="nosotros">
+    <section id="nosotrosSection">
       <div class="container">
         <div class="mision">
           <!-- <i class="fa fa-paper-plane-o"></i> -->
@@ -65,7 +65,7 @@
         <div class="vision">
           <i class="fa fa-eye"></i>
           <h3>Visión</h3>
-          <p>Somos una empresa que satisface las necesidades de nuestros clientes brindándole un servicio formal y de calidad, a través de soluciones innovadoras y adaptables al cambio respetando y contribuyendo al desarrollo sostenible de la comunidad.</p>
+          <p>Somos una empresa que satisface las necesidades de nuestros clientes <br> brindándole un servicio formal y de calidad, a través de soluciones innovadoras y adaptables al cambio <br> respetando y contribuyendo al desarrollo sostenible de la comunidad.</p>
         </div>
         <div class="valores">
           <i class="fa fa-hand-o-up"></i>
@@ -82,7 +82,7 @@
     </section>
     <hr>
 
-    <section id="proyectos">
+    <section id="proyectosSection">
       <div class="container">
         <h2>Proyectos</h2>
         <div class="galeria-proyectos">
@@ -155,13 +155,13 @@
       </div>
     </section>
     
-    <section id="servicios">
+    <section id="serviciosSection">
       <div class="container">
         <h3>Servicios</h3>
       </div>
     </section>
 
-    <section id="contacto">
+    <section id="contactoSection">
       <div class="container">
         <h3>Contáctanos</h3>
         <div>
