Added 'scrollReveal' for  html elements

--- a/index.html
+++ b/index.html
@@ -37,15 +37,15 @@
             </a>
           </div> 
           <ul>
-            <li><a id="nosotros" href="#nosotrosServicios">Nosotros</a></li>
-            <li><a id="proyectos" href="#proyectosServicios">Proyectos</a></li>
-            <li><a id="servicios" href="#serviciosServicios">Servicios</a></li>
-            <li><a id="contacto" href="#contactoServicios">Contáctanos</a></li>
+            <li><a id="Nosotros" href="#seccionNosotros">Nosotros</a></li>
+            <li><a id="Proyectos" href="#seccionProyectos">Proyectos</a></li>
+            <li><a id="Servicios" href="#seccionServicios">Servicios</a></li>
+            <li><a id="Contacto" href="#seccionContacto">Contáctanos</a></li>
           </ul>
         </div>
       </nav>
-      <div hero-container>
-        <img src="img/hacis%20logo%20formal%202.png" alt="HACIS PROYECTOS">
+      <div class="hero-container">
+        <img src="img/hacis%20logo%20formal%202.png" alt="HACIS PROYECTOS" class="logoHacis">
         <ul>
           <li>
             <a href="#">
@@ -62,7 +62,7 @@
     </div>
 
 
-    <section id="nosotrosSection">
+    <section id="seccionNosotros">
       <div class="container">
         <div class="mision">
           <!-- <i class="fa fa-paper-plane-o"></i> -->
@@ -90,7 +90,7 @@
     </section>
     <hr>
 
-    <section id="proyectosSection">
+    <section id="seccionProyectos">
       <div class="container">
         <h2>Proyectos</h2>
         <div class="galeria-proyectos">
@@ -163,17 +163,17 @@
       </div>
     </section>
     
-    <section id="serviciosSection">
+    <section id="seccionServicios">
       <div class="container">
         <h3>Servicios</h3>
       </div>
     </section>
 
-    <section id="contactoSection">
+    <section id="seccionContacto">
       <div class="container">
         <h3>Contáctanos</h3>
         <div>
-          <form action="">
+          <form id="formContact" action="">
             <p>
               <label for="nombre"> Nombre(s)</label>
               <input type="text" name="nombre" required>
@@ -252,6 +252,7 @@
     <script src="js/parallax.js"></script>
     <script src="js/scripts.js"></script>
     -->
+    <script src="https://cdn.jsdelivr.net/scrollreveal.js/3.1.4/scrollreveal.min.js"></script>
     <script src="js/app.js"></script>
   </body>
 </html>
