Added responsive menu

--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
     <div class="hero">
       <nav id="menu">
         <div class="nav-container">
+           <div class="menu-bars">
+             <i class="fa fa-bars"></i>
+           </div>
           <div class="brand">
             <a href="#">
               <img src="img/logo_Hacis.png" alt="Logo Hacis">
