--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
           <hr>
         </div>
         <div class="mensaje">
-          <p>" Seguridad,<br> experiencia <br> y crecimiento. "</p>
+          <p>" Seguridad, experiencia <br> y <br> crecimiento. "</p>
         </div>
         
         <div class="informacion">
