Change view on map

--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
         
         <div class="ubicacion">
           <div id="map">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d7654.628636578587!2d-71.52130066604458!3d-16.40885543785134!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2spe!4v1458578810806" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+            <iframe src="https://www.google.com/maps/d/embed?mid=zqFugoVLEu9w.kxqxanCCVXEQ" width="640" height="480"></iframe>
           </div>
         </div>
       </div>
