Added style for onscroll items nav active

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
               <img src="img/logo_Hacis.png" alt="Logo Hacis">
             </a>
           </div> 
-          <ul>
+          <ul class="top-menu">
             <li><a id="Nosotros" href="#seccionNosotros">Nosotros</a></li>
             <li><a id="Proyectos" href="#seccionProyectos">Proyectos</a></li>
             <li><a id="Servicios" href="#seccionServicios">Servicios</a></li>
