Added servicios, styles and responsive

--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@
               <img src="img/construccion10.jpg" alt="Imagen proyectos civiles">
               <div class="overlay">
                  <div class="content">
-                    <h5>Proyecto Civil</h5>
-                    <p>Realizamos proyectos en el área civil</p>
+                    <h5>Proyectos Civiles</h5>
+                    <p>Elaboración de proyectos para el sector público y privado.</p>
                  </div>
               </div>
             </div>
@@ -125,8 +125,8 @@
               <img src="img/grua.jpg" alt="Imagen proyectos civiles">
               <div class="overlay">
                  <div class="content">
-                    <h5>Proyecto Civil</h5>
-                    <p>Realizamos proyectos en el área civil</p>
+                    <h5>Proyectos Civiles</h5>
+                    <p>Alquiler de máquinas, vehículos, maquinaria pesada</p>
                  </div>
               </div>
             </div>
@@ -134,8 +134,8 @@
               <img src="img/construccion.jpg"   alt="Imagen proyectos civiles">
               <div class="overlay">
                  <div class="content">
-                    <h5>Proyecto Civil</h5>
-                    <p>Realizamos proyectos en el área civil</p>
+                    <h5>Proyectos Civiles</h5>
+                    <p>Proyectos y obras Civiles</p>
                  </div>
               </div>
             </div>
@@ -149,8 +149,8 @@
               <img src="img/electrico-2jpg.jpg" alt="Imagen proyectos eléctricos">
               <div class="overlay">
                  <div class="content">
-                    <h5>Proyecto Eléctrico</h5>
-                    <p>Realizamos proyectos en el área de electricidad</p>
+                    <h5>Proyectos Eléctricos</h5>
+                    <p>Montaje de Subestaciones eléctricas</p>
                  </div>
               </div>
             </div>
@@ -158,8 +158,8 @@
               <img src="img/electrico-4.jpg" alt="Imagen proyectos eléctricos">
               <div class="overlay">
                  <div class="content">
-                    <h5>Proyecto Eléctrico</h5>
-                    <p>Realizamos proyectos en el área de electricidad</p>
+                    <h5>Proyectos Eléctricos</h5>
+                    <p>Supervisión de obras eléctricas</p>
                  </div>
               </div>
             </div>
@@ -167,8 +167,8 @@
               <img src="img/electrico-1.jpg" alt="Imagen proyectos eléctricos">
               <div class="overlay">
                  <div class="content">
-                    <h5>Proyecto Eléctrico</h5>
-                    <p>Realizamos proyectos en el área de electricidad</p>
+                    <h5>Proyectos Eléctricos</h5>
+                    <p>Consultoría y asesoramiento en eficiencia energética</p>
                  </div>
               </div>
             </div>
@@ -180,6 +180,28 @@
     <section id="seccionServicios">
       <div class="container">
         <h3>Servicios</h3>
+        <ul class="lista-servicios">
+          <li> 
+            <p> <i class="fa fa-cubes"></i> Diseñamos ,elaboramos proyectos e implementamos sistemas de utilización eléctrica.</p>
+            <p> <i class="fa fa-cubes"></i> Montaje de Subestaciones eléctricas.</p>
+          </li>
+          <li>
+            <p> <i class="fa fa-cubes"></i> Mantenimientos de equipos eléctricos e instalaciones.</p>
+            <p> <i class="fa fa-cubes"></i> Consultoría, asesoramiento en eficiencia energética.</p>
+          </li>
+          <li>
+            <p> <i class="fa fa-cubes"></i> Estudios de pre-inversión en el marco SNIP.</p>    
+            <p> <i class="fa fa-cubes"></i> Elaboración de proyectos para el sector público y privado.</p>
+          </li>
+          <li> 
+            <p> <i class="fa fa-cubes"></i> Proyecto de líneas de trasmisión, distribución y subestaciones.</p>
+            <p> <i class="fa fa-cubes"></i> Proyectos  y obras Civiles.</p>
+          </li>
+          <li> 
+            <p> <i class="fa fa-cubes"></i> Supervisión de obras eléctricas y civiles.</p>
+            <p> <i class="fa fa-cubes"></i> Alquiler de máquinas, vehículos, maquinaria pesada.</p>
+          </li>
+        </ul>
       </div>
     </section>
 
