--- a/index.html
+++ b/index.html
@@ -60,12 +60,12 @@
         </div>
         <ul>
           <li>
-            <a href="#" target="_blank">
+            <a href="#" target="_blank" title="Facebook">
               <i class="fa fa-facebook"></i>
             </a>
           </li>
           <li>
-            <a href="#" target="_blank">
+            <a href="#" target="_blank" title="Twitter">
               <i class="fa fa-twitter"></i>
             </a>
           </li>
