Added scroll reveal to form and services

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       </nav>
       <div class="hero-container">
         <div class="logoHacis">
-          <img src="img/hacis%20logo%20formal%202.png" alt="HACIS PROYECTOS">
+          <img src="img/hacis%20logo%20formal%201.png" alt="HACIS PROYECTOS">
         </div>
         <ul>
           <li>
@@ -181,23 +181,23 @@
       <div class="container">
         <h3>Servicios</h3>
         <ul class="lista-servicios">
-          <li> 
+          <li class="item-servicios"> 
             <p> <i class="fa fa-cubes"></i> Diseñamos ,elaboramos proyectos e implementamos sistemas de utilización eléctrica.</p>
             <p> <i class="fa fa-cubes"></i> Montaje de Subestaciones eléctricas.</p>
           </li>
-          <li>
+          <li class="item-servicios">
             <p> <i class="fa fa-cubes"></i> Mantenimientos de equipos eléctricos e instalaciones.</p>
             <p> <i class="fa fa-cubes"></i> Consultoría, asesoramiento en eficiencia energética.</p>
           </li>
-          <li>
+          <li class="item-servicios">
             <p> <i class="fa fa-cubes"></i> Estudios de pre-inversión en el marco SNIP.</p>    
             <p> <i class="fa fa-cubes"></i> Elaboración de proyectos para el sector público y privado.</p>
           </li>
-          <li> 
+          <li class="item-servicios"> 
             <p> <i class="fa fa-cubes"></i> Proyecto de líneas de trasmisión, distribución y subestaciones.</p>
             <p> <i class="fa fa-cubes"></i> Proyectos  y obras Civiles.</p>
           </li>
-          <li> 
+          <li class="item-servicios"> 
             <p> <i class="fa fa-cubes"></i> Supervisión de obras eléctricas y civiles.</p>
             <p> <i class="fa fa-cubes"></i> Alquiler de máquinas, vehículos, maquinaria pesada.</p>
           </li>
@@ -210,31 +210,31 @@
         <h3>Contáctanos</h3>
         <div>
           <form method="post" id="register-form" novalidate="novalidate">
-            <p>
+            <p class="item-form">
               <label for="nombre"> Nombre(s)</label>
               <input type="text" name="nombre">
             </p>
-            <p>
+            <p class="item-form">
               <label for="apellidos"> Apellidos</label>
               <input type="text" name="apellidos">
             </p>
-            <p>
+            <p class="item-form">
               <label for="empresa">Empresa</label>
               <input type="text" name="empresa" placeholder=" *Opcional">
             </p>
-            <p>
+            <p class="item-form">
               <label for="email"> Email</label>
               <input type="email" name="email">
             </p>
-            <p>
+            <p class="item-form">
               <label for="telefono"> Teléfono</label>
               <input type="text" name="telefono">
             </p>
-            <p>
+            <p class="item-form">
               <label for="Mensaje"> Mensaje</label>
               <textarea name="mensaje" id="" cols="30" rows="10"></textarea>
             </p>
-            <p>
+            <p class="item-form">
               <input type="submit" value="ENVIAR">
             </p>
           </form>
