--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
           <hr>
         </div>
         <div class="mensaje">
-          <p>" Seguridad, experiencia <br> y <br> crecimiento. "</p>
+          <p>" Seguridad, experiencia y crecimiento. "</p>
         </div>
         
         <div class="informacion">
