--- a/index.html
+++ b/index.html
@@ -9,18 +9,8 @@
         display: none !important;
       }
     </style>
-    <!-- 
-    <link href="css/themify-icons.css" rel="stylesheet" type="text/css" media="all" />
-    <link href="css/flexslider.css" rel="stylesheet" type="text/css" media="all" />
-    <link href="css/lightbox.min.css" rel="stylesheet" type="text/css" media="all" />
-    <link href="css/ytplayer.css" rel="stylesheet" type="text/css" media="all" />
-    -->
-    <!-- <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" media="all" /> -->
     <link rel="stylesheet" href="css/font-awesome.min.css" type="text/css" media="all" />
     <link href="css/main.css" rel="stylesheet" type="text/css" media="all" />
-    <!--
-    <link href='http://fonts.googleapis.com/css?family=Lato:300,400%7CRaleway:100,400,300,500,600,700%7COpen+Sans:400,500,600' rel='stylesheet' type='text/css'> 
-    -->
     <link rel="stylesheet" type="text/css" href="bower_components/sweetalert/dist/sweetalert.css">
     <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico" />
     <script>
@@ -249,7 +239,7 @@
           <hr>
         </div>
         <div class="mensaje">
-          <p>" Seguridad, experiencia y crecimiento. "</p>
+          <p>" Seguridad, experiencia y crecimiento."</p>
         </div>
         
         <div class="informacion">
@@ -258,7 +248,10 @@
               <i class="fa fa-map-marker"></i>Dirección:  Urb. Santo Domingo B-11 - Arequipa
             </li>
             <li>
-              <i class="fa fa-phone"></i>Teléfono: 982327644
+              <i class="fa fa-phone"></i>Teléfono: 054-461722
+            </li>
+            <li>
+              <i class="fa fa-mobile"></i>Celular: 982327644
             </li>
             <li>
               <i class="fa fa-envelope-o"></i>Email:  melanievelasquez@hacisproyectos.com
@@ -273,22 +266,9 @@
         </div>
       </div>
     </footer>
-
+    
+    <!--SCRIPTS-->
     <script src="js/jquery.min.js"></script>
-    <!--
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/flexslider.min.js"></script>
-    <script src="js/lightbox.min.js"></script>
-    <script src="js/masonry.min.js"></script>
-    <script src="js/twitterfetcher.min.js"></script>
-    <script src="js/spectragram.min.js"></script>
-    <script src="js/ytplayer.min.js"></script>
-    <script src="js/countdown.min.js"></script>
-    <script src="js/smooth-scroll.min.js"></script>
-    <script src="js/parallax.js"></script>
-    <script src="js/scripts.js"></script>
-    -->
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.3/angular.min.js"></script> -->
     <script src="bower_components/sweetalert/dist/sweetalert.min.js"></script>
     <script src="https://cdn.jsdelivr.net/scrollreveal.js/3.1.4/scrollreveal.min.js"></script>
     <script src="js/app.js"></script>
