Add Change of email-contact

--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
               <i class="fa fa-mobile"></i>Celular: 982327644
             </li>
             <li>
-              <i class="fa fa-envelope-o"></i>Email:  melanievelasquez@hacisproyectos.com
+              <i class="fa fa-envelope-o"></i>Email:  contactanos@hacisproyectos.com
             </li>
           </ul>
         </div>
