--- a/index.html
+++ b/index.html
@@ -225,7 +225,8 @@
               <textarea name="mensaje" id="" cols="30" rows="10"></textarea>
             </p>
             <p class="item-form">
-              <input type="submit" value="ENVIAR">
+              <span id="sendingText"></span>
+              <input id="sendMessageBtn" type="submit" value="ENVIAR">
             </p>
           </form>
         </div>
