Added generic and facebook metatags

--- a/index.html
+++ b/index.html
@@ -3,7 +3,21 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HACIS PROYECTOS</title>
+    <!-- Generic meta -->
+    <meta name="author" content="Team Atix Plus - Perú">
+    <meta name="title" content="HACIS PROYECTOS | Construcción y Consultoría de proyectos civiles y eléctricos">
+    <meta name="description" content="Empresa consultora y constructora de proyectos civiles y eléctricos.">
+    <meta name="keywords" content="Hacis Proyectos, proyectos civiles, proyectos eléctricos, consultora, constructora, 
+    Perú, Arequipa">
+    <!-- Facebook meta -->
+    <meta property="og:title" content="HACIS PROYECTOS | Construcción y Consultoría de proyectos civiles y eléctricos" />
+    <meta property="og:type" content="article" />
+    <meta property="og:description" content="Somos una empresa que satisface las necesidades de nuestros 
+    clientes brindándole un servicio formal y de calidad, a través de soluciones innovadoras y adaptables al cambio respetando y 
+    contribuyendo al desarrollo sostenible de la comunidad." />
+    <meta property="og:url" content="http://hacisproyectos.com/" />
+    
+    <title>HACIS PROYECTOS | Construcción y Consultoría</title>
     <style type="text/css">
       [ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
         display: none !important;
