--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
       </nav>
       <div class="hero-container">
         <div class="logoHacis">
+          <h1>Hacis Proyectos - Constuctora y Consultora</h1>
           <img src="img/hacis%20logo%20formal%201.png" alt="HACIS PROYECTOS">
         </div>
         <ul>
