--- a/last_index.html
+++ b/last_index.html
@@ -15,7 +15,7 @@
     <meta property="og:description" content="Somos una empresa que satisface las necesidades de nuestros 
     clientes brindándole un servicio formal y de calidad, a través de soluciones innovadoras y adaptables al cambio respetando y 
     contribuyendo al desarrollo sostenible de la comunidad." />
-    <meta property="og:url" content="http://hacisproyectos.com/" />
+    <meta property="og:url" content="https://hacisproyectos.com/" />
     
     <title>HACIS PROYECTOS | Construcción y Consultoría</title>
     <style type="text/css">
@@ -288,7 +288,7 @@
     <script src="bower_components/sweetalert/dist/sweetalert.min.js"></script>
     <script src="https://cdn.jsdelivr.net/scrollreveal.js/3.1.4/scrollreveal.min.js"></script>
     <script src="js/app.js"></script>
-    <script src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.9/jquery.validate.min.js"></script>
+    <script src="https://ajax.aspnetcdn.com/ajax/jquery.validate/1.9/jquery.validate.min.js"></script>
     <script src="js/jqvalidate-rules.js"></script>
   </body>
 </html>
