--- a/electrico.html
+++ b/electrico.html
@@ -56,9 +56,9 @@
             <li><a href="#seccionNosotros">Nosotros</a></li>
             <li class="dropdown"><a href="#Servicios">Servicios</a>
               <div class="dropdown-content">
-                <a href="electrico.html">Eléctrico</a>
-                <a href="metalico.html">Metálico</a>
-                <a href="renovable.html">Renovables</a>
+                <a href="#">Eléctrico</a>
+                <a href="#">Metálico</a>
+                <a href="#">Renovables</a>
               </div>
             </li>
             <li><a href="#Clientes">Clientes</a></li>
@@ -66,139 +66,8 @@
           </ul>
         </div>
       </nav>
-      <div class="hero-container">
-        <div class="logoHacis">
-          <h1>Hacis Proyectos - Constuctora y Consultora</h1>
-          <img src="img/hacis%20logo%20formal%201.png" alt="HACIS PROYECTOS">
-        </div>
-        <ul>
-          <li>
-            <a href="#" target="_blank" title="Facebook">
-              <i class="fa fa-facebook"></i>
-            </a>
-          </li>
-          <li>
-            <a href="#" target="_blank" title="Twitter">
-              <i class="fa fa-twitter"></i>
-            </a>
-          </li>
-        </ul>
-      </div>
-    </div>
 
-
-    <section id="seccionNosotros">
-      <div class="container">
-        <div class="row">
-          <div class="col mx-2 px-4 text-center">
-            <!-- <i class="fa fa-paper-plane-o"></i> -->
-            <i class="fa fa-crosshairs"></i>
-            <h3>Misión</h3>
-            <hr>
-            <p>Brindar a nuestros clientes un servicio integral y de calidad a través de soluciones innovadoras, contribuyendo al desarrollo sostenible de la comunidad y cuidando el medio ambiente.</p>
-          </div>
-          <div class="col mx-2  px-4 text-center">
-            <i class="fa fa-eye"></i>
-            <h3>Visión</h3>
-            <hr>
-            <p>Ser una empresa líder del sur del Perú, suministrando bienes y servicios de calidad, alcanzando un reconocimiento en el sector.</p>
-          </div>
-        </div>
-        <div class="row mt-4">
-        <div class="col-4" ></div>
-        <div class="col-4 text-center">
-          <i class="fa fa-hand-o-up"></i>
-          <h3>Valores</h3>
-          <hr>
-          <div>
-            <p class="text-left valores">
-              <span><b>H</b>onestidad</b></span> <br>
-              <span><b>A</b>utoevaluación</span> <br>
-              <span><b>C</b>ompromiso</span> <br>
-              <span><b>I</b>ntegridad</span> <br>
-              <span><b>S</b>ostenibilidad</span>
-            </p>
-          </div>
-        </div>
-        <div class="col-4"></div>
-        </div> 
-      </div>
-    </section>
-
-    <section id="Servicios">
-      <div class="container">
-        <h2>Proyectos</h2>
-        <div class="galeria-proyectos">
-          <div class="proyectos-civiles">
-            <div class="title">
-              <h3>Proyectos Civiles</h3>
-            </div>
-            <div class="item-lg civil-01">
-              <img src="img/construccion10.jpg" alt="Imagen proyectos civiles">
-              <div class="overlay">
-                 <div class="content">
-                    <h5>Proyectos Civiles</h5>
-                    <p>Elaboración de proyectos para el sector público y privado.</p>
-                 </div>
-              </div>
-            </div>
-            <div class="item-md civil-02">
-              <img src="img/grua.jpg" alt="Imagen proyectos civiles">
-              <div class="overlay">
-                 <div class="content">
-                    <h5>Proyectos Civiles</h5>
-                    <p>Alquiler de máquinas, vehículos, maquinaria pesada</p>
-                 </div>
-              </div>
-            </div>
-            <div class="item-md civil-03">
-              <img src="img/construccion.jpg"   alt="Imagen proyectos civiles">
-              <div class="overlay">
-                 <div class="content">
-                    <h5>Proyectos Civiles</h5>
-                    <p>Proyectos y obras Civiles</p>
-                 </div>
-              </div>
-            </div>
-          </div>
-          
-          <div class="proyectos-electricos">
-            <div class="title">
-              <h3>Proyectos Eléctricos</h3>
-            </div> 
-            <div class="item-md electr-01">
-              <img src="img/electrico-2jpg.jpg" alt="Imagen proyectos eléctricos">
-              <div class="overlay">
-                 <div class="content">
-                    <h5>Proyectos Eléctricos</h5>
-                    <p>Montaje de Subestaciones eléctricas</p>
-                 </div>
-              </div>
-            </div>
-            <div class="item-md electr-02">
-              <img src="img/electrico-4.jpg" alt="Imagen proyectos eléctricos">
-              <div class="overlay">
-                 <div class="content">
-                    <h5>Proyectos Eléctricos</h5>
-                    <p>Supervisión de obras eléctricas</p>
-                 </div>
-              </div>
-            </div>
-            <div class="item-lg electr-03">
-              <img src="img/electrico-1.jpg" alt="Imagen proyectos eléctricos">
-              <div class="overlay">
-                 <div class="content">
-                    <h5>Proyectos Eléctricos</h5>
-                    <p>Consultoría y asesoramiento en eficiencia energética</p>
-                 </div>
-              </div>
-            </div>
-          </div>
-        </div>  
-      </div>
-    </section>
-    
-    <!-- <section id="seccionServicios">
+    <section id="seccionServicios">
       <div class="container">
         <h3>Servicios</h3>
         <ul class="lista-servicios">
@@ -224,40 +93,6 @@
           </li>
         </ul>
       </div>
-    </section> -->
-
-    <section id="Clientes">
-      <div class="container">
-        <h2>Clientes</h2>
-        <p>Algunos de nuestros clientes:</p>
-        <div class="row m-2">
-          <div class="col client">
-            <img src="img/clients/aceros.png" width="100%">
-          </div>
-          <div class="col client">
-            <img src="img/clients/cip.png" width="100%">
-          </div>
-          <div class="col client">
-            <img src="img/clients/cruz_del_sur.png" width="100%">
-          </div>
-          <div class="col client">
-            <img src="img/clients/cuatrogallos.png" width="100%">
-          </div>
-        </div>
-        <div class="row m-2">
-          <div class="col client">
-            <img src="img/clients/kr.png" width="100%">
-          </div>
-          <div class="col client">
-            <img src="img/clients/prodimin.png" width="100%">
-          </div>
-          <div class="col client">
-            <img src="img/clients/realplaza.png" width="100%">
-          </div>
-          <div class="col client">
-            <img src="img/clients/sunat.png" width="100%">
-          </div>
-        </div>
     </section>
 
     <section id="Contacto">
